Code distributed in bin and lib folders and different files

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "youterm": "./index.js"
+    "youterm": "./bin/youterm"
   },
   "preferGlobal": true,
   "author": "Fernando Gómez",
